# ovgs

./: .gitignore  BUILD.bazel  CONTRIBUTORS  LICENSE  MODULE.bazel  README.md  compile_protos.sh  go.mod  go.sum  ovgs.pb.go  ovgs.proto  ovgs_grpc.pb.go  regenerate-files.sh
docs/: service-overview.md
scripts/: generate-proto.sh
