module(
    name = "openconfig_ovgs",
    version = "0.1.0",
)

# Choose the most recent version available at
# https://registry.bazel.build/modules/<name>
bazel_dep(name = "grpc", version = "1.76.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "33.0", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.5")

bazel_dep(name = "googletest", version = "1.17.0")
